--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "next": "14.2.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^7.6.0",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "14.2.1",
@@ -28,13 +30,12 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "eslint-plugin-storybook": "^0.8.0",
-    "eslint-plugin-tailwindcss": "^3.15.1",
     "eslint-plugin-unused-imports": "^3.1.0",
     "husky": "^8.0.0",
     "lint-staged": "^15.2.2",
-    "postcss": "^8",
-    "prettier-plugin-tailwindcss": "^0.5.13",
-    "tailwindcss": "^3.4.3"
+    "postcss": "^8.4.38",
+    "prettier-plugin-tailwindcss": "^0.5.13",    
+    "eslint-plugin-tailwindcss": "^3.15.1"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,html,css}": "prettier --write",
