--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "@headlessui/react": "^1.7.18",
     "next": "14.2.1",
     "react": "^18",
-    "react-dom": "^18",
-    "tailwindcss": "^3.4.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^7.6.0",
@@ -35,7 +34,8 @@
     "lint-staged": "^15.2.2",
     "postcss": "^8.4.38",
     "prettier-plugin-tailwindcss": "^0.5.13",    
-    "eslint-plugin-tailwindcss": "^3.15.1"
+    "eslint-plugin-tailwindcss": "^3.15.1",
+    "tailwindcss": "^3.4.3"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,html,css}": "prettier --write",
