--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.3",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18"
@@ -29,12 +30,12 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "eslint-plugin-storybook": "^0.8.0",
+    "eslint-plugin-tailwindcss": "^3.15.1",
     "eslint-plugin-unused-imports": "^3.1.0",
     "husky": "^8.0.0",
     "lint-staged": "^15.2.2",
     "postcss": "^8.4.38",
-    "prettier-plugin-tailwindcss": "^0.5.13",    
-    "eslint-plugin-tailwindcss": "^3.15.1",
+    "prettier-plugin-tailwindcss": "^0.5.13",
     "tailwindcss": "^3.4.3"
   },
   "lint-staged": {
