--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
+    "@tanstack/react-table": "^8.16.0",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18"
