--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.1",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
+    "@tanstack/react-table": "^8.16.0",
+    "graphql": "^16.8.1",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18"
