--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@apollo/client": "^3.10.1",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
     "@tanstack/react-table": "^8.16.0",
+    "chart.js": "^4.4.2",
     "graphql": "^16.8.1",
     "next": "14.2.1",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18"
   },
   "devDependencies": {
