--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
+    "@tanstack/react-query": "^5.32.0",
     "@tanstack/react-table": "^8.16.0",
     "chart.js": "^4.4.2",
     "graphql": "^16.8.1",
+    "graphql-request": "^6.1.0",
     "next": "14.2.1",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
